# data-science-interview-task

./: README.md  data-science-task-slides.pptx  exploration.ipynb  visualisation.ipynb
code/: app.py  classification.py  dockerfile  main.py  preprocessing.py  pyproject.toml  requirements.txt
code/config/: best_params_decision_tree.pkl  best_params_gradient_boosting.pkl  best_params_lightgbm.pkl  best_params_logistic.pkl  best_params_random_forest.pkl  best_params_xgboost.pkl
